<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.home.HomeFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/match_images"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startNewGameButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        android:text="@string/start_new_game"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineCenter" />

    <Button
        android:id="@+id/statisticsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/blue_button"
        android:text="@string/statistics"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/startNewGameButton" />

    <Button
        android:id="@+id/webViewButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/blue_button"
        android:text="@string/webview"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/statisticsButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="481dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="64dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="64dp" />

</androidx.constraintlayout.widget.ConstraintLayout>